--- a/zeev-ginzburg-react-1-notes-app/src/components/form.css
+++ b/zeev-ginzburg-react-1-notes-app/src/components/form.css
@@ -5,10 +5,15 @@
 }
 
 .main-form {
-    background-color: aquamarine;
+    background-color: #facdb9;
     display: flex;
     flex-direction: column;
     margin: auto;
+    margin-top: 1.5rem;
     padding: 1rem;
     width: 25%;
+    font-family:'Poppins';
+    border-radius: 10px;
+
+
 }
